option('static', type : 'boolean', value : true, description : 'Build the static object by default')
option('bin', type : 'boolean', value : false, description : 'Do not build the binary by default')
option('so', type : 'boolean', value : false, description : 'Do not build the shared object default')
