option('lib', type : 'boolean', value : true, description : 'Build the static object by default')
option('bin', type : 'boolean', value : false, description : 'Do not build the binary by default')
option('static-bin', type : 'boolean', value : false, description : 'Do not build the static binary by default')
option('openssl-compat', type: 'boolean', value : false, description : 'Link using openssl11 compatibility library')
